<resources>
    <string name="app_name">SecureNote</string>
    <string name="to_do">To Do</string>
    <string name="enter_note">ENTER NOTE</string>
    <string name="save">SAVE</string>
    <string name="night_mode">NIGHT MODE</string>
    <string name="date">DATE</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="Signout">SignOut</string>
</resources>
