<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/ic_check_white_24dp"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/night_mode"
        android:title="@string/night_mode"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="never" />


    <item
        android:id="@+id/update"
        android:title="@string/update"
        app:showAsAction="never" />
    <item
        android:id="@+id/signout"
        android:icon="@drawable/ic_close_black_24dp"
        android:title="@string/Signout"
        app:showAsAction="always" />
</menu>